--- a/attractionsApp/attractionsApp.csproj
+++ b/attractionsApp/attractionsApp.csproj
@@ -81,6 +81,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddedObject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddedObject.Designer.cs">
+      <DependentUpon>AddedObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddNewAttraction.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     <Compile Include="Registration.Designer.cs">
       <DependentUpon>Registration.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddedObject.resx">
+      <DependentUpon>AddedObject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddNewAttraction.resx">
       <DependentUpon>AddNewAttraction.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,6 +187,7 @@
     <None Include="Resources\black.png" />
     <None Include="Resources\caption.jpg" />
     <None Include="Resources\88016.png" />
+    <None Include="Resources\delete.png" />
     <Content Include="Resources\kazanKreml.jpg" />
   </ItemGroup>
   <ItemGroup>
